[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "PySocketCommLib"
version = "0.2.0"
description = "Python library for low-level socket communication with minimum external dependencies"
authors = [{ name = "Jhonattan Rocha", email = "jhonattan246rocha@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["socket", "websocket", "http", "server", "client", "orm", "async", "threading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Única dependência obrigatória: suporte a criptografia
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
# Banco PostgreSQL (driver customizado via socket, mas psycopg2 ainda é usado para fallback)
postgres = ["psycopg2-binary>=2.9.0"]

# Cache Redis
redis = ["redis>=4.0.0"]

# Monitoramento de sistema (CPU, memória, disco)
monitoring = ["psutil>=5.9.0"]

# Todas as dependências opcionais de uma vez
all = [
    "psycopg2-binary>=2.9.0",
    "redis>=4.0.0",
    "psutil>=5.9.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "psutil>=5.9.0",
    "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Jhonattan-rocha/PySocketCommLib"
"Bug Tracker" = "https://github.com/Jhonattan-rocha/PySocketCommLib/issues"

[project.scripts]
pysocketcomm = "PySocketCommLib.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "backup_imports*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
